[tool.poetry]
name = "mlfeatureselection"
version = "2.3.1"
description = "Asset to help data scientists retain only the most interesting features."
authors = ["Mehdi-Tantaoui <m.tantaoui@ibm.com>", 
"Alpha Diallo <alpha.diallo@fr.ibm.com>", 
"Valentin Belin <Valentin.BELIN1@ibm.com>",
"Rob Worsley <rob.worsley@fr.ibm.com>",
"Thomas-Binder <thomas.binder@ibm.com>"]
readme = "README.md"
repository = "https://github.ibm.com/m-tantaoui/MLFeatureSelection"
license = ""
packages = [
    { include = "feature_selection" }
]

[tool.poetry.dependencies]
python = "^3.4"
logzero = "1.5.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pandas = "^1.0"
seaborn = "^0.11.0"
matplotlib = "^3.3.2"
jupyter = "^1.0.0"
xgboost = "^1.0.0"
black = "^20.8b1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
isort = "^5.6.4"

[tool.black]
line-length = 127
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
